# ros2-barret-wam

wam_make_pile/: CMakeLists.txt  package.xml
wam_make_pile/config/: computed_torque_controller.yaml  display.rviz  gazebo.rviz  gazebo_joint.rviz  pid_independent_joint_controller.yaml  pid_plus_gravity_controller.yaml
wam_make_pile/launch/: computed_torque_controller.launch.xml  display.launch.xml  gazebo.launch.xml  pid_independent_joint_controller.launch.xml  pid_plus_gravity_controller.launch.xml  trajectory.launch.xml  wam_node.launch.xml  wam_node_sim.launch.xml
wam_make_pile/scripts/: set_home.sh  spawn_coke_can.sh  step.sh  step_home.sh  step_zero.sh
wam_make_pile/src/: joint_trajectory_publisher.cpp  pid_plus_gravity_controller.cpp  pose_stamped2joint.cpp  pose_stamped2tf.cpp  pose_trajectory_publisher.cpp
